@@ -12,10 +12,11 @@ Remote Interface: "item_delivery_pod", "call_crash_ship"
 Command: "item_delivery_pod-call_crash_ship"
 Arguments (in order):
  - target = either a player name to target or a position (array of x and y [0,0] or a dictionary of x and y key value pairs {"x"=0,"y"=0})
- - radius = radius (integer) from the target that the pod will randomly select somewhere to land within.
+ - radius = either a single number for radius (integer) from the target that the pod will randomly select somewhere to land within. Or as a simple 2 number array [2,10] for the min and max radius from the target it will centre on, for use if you don't want to hit the target position directly.
  - crashTypeName = the name of a pod/ship type for the delivery, either: "tiny", "small", "medium", "large", or "modular". If modular then the number of modules must be specified as a number on the end of the name, i.e. "modular6".
  - contents = a table (dictionary) of itemName (string) and quantity (integer). Modular pods will have the contents devided up across the large debris pieces. Can be intentionally empty with "nil"
 All arguments via command accept strings with spaces in if wrapped in double or single quotes, i.e. "User Name 53". They also accept tables in JSON format WITHOUT spaces, i.e. {"iron-plate":100,"coin":100}
+Interface calls should be made using Lua syntax and not JSON format arguments.
 
 Command examples:
 /item_delivery_pod-call_crash_ship "muppet9010" 5 "large" {"iron-plate":100,"coin":100}
