@@ -3,6 +3,7 @@ Version: 18.0.2
 Date: 2020-xx-XX
   Features:
     - Update for Factorio 0.18
+    - radius now supports an array to provide min and max radius for centre of drop pod to be from target to avoid hitting the target directly. Old single number can still be supplied and will apply a minimum radius of 0.
   Changes:
     - slightly reduce damage of tiny crashing ship. so it doesn't kill things around it by 1 tile any more.
   Bugfixes:
